[package]
name = "yee-utils"
version = "0.1.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
linked-hash-map = "0.5.3"
escaper = "0.1.0"
madato = "0.5.3"
prettytable-rs = "^0.8"
regex = "1.3.1"
hex = "0.4.0"
