[package]
name = "yee-utils"
version = "0.10.0"
authors = ["YeeCo <contact@yeefoundation.com>"]
edition = "2018"

[lib]
name = "yee_utils_lib"
path = "src/lib.rs"

[[bin]]
name = "yee-utils"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
linked-hash-map = "0.5.3"
escaper = "0.1.0"
madato = "0.5.3"
prettytable-rs = "^0.8"
regex = "1.3.1"
hex = "0.4.0"
lazy_static = "1.4.0"
rand = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
reqwest = { version = "0.10", features = ["json"] }
tokio ={ version = "0.2.17", features = ["rt-core", "time", "sync", "stream", "macros"] }
futures = "0.3"
parity-codec = { version = "3.5", features = ["derive"] }
chrono = "0.4.10"
num-bigint = "0.2.2"
rpassword = "4.0.5"
ring = "0.14"
rust-crypto = "0.2"
num-traits = "0.2.12"
sss-rs = "0.7"
twox-hash = "1.5"
byteorder = "1.3"
mut_static = "5.0.0"
yee-signer = { git = "https://github.com/yeeco/yee-signer", tag="v0.5.0"}
yee-primitives = { git = "https://github.com/yeeco/yeeroot", branch = "master" }
yee-sharding = { git = "https://github.com/yeeco/yeeroot", branch = "master" }
yee-runtime = { git = "https://github.com/yeeco/yeeroot", branch = "master" }
yee-consensus-pow = { git = "https://github.com/yeeco/yeeroot", branch = "master" }
finality-tracker = { git = "https://github.com/yeeco/yeeroot", branch = "master" }
yee-sharding-primitives = { git = "https://github.com/yeeco/yeeroot", branch = "master" }
runtime-primitives = { package = "sr-primitives", git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0" }
substrate-primitives =  { package = "substrate-primitives", git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0" }
srml-support = { package = "srml-support", git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0" }
srml-system = { package = "srml-system", git = "https://github.com/yeeco/substrate.git", branch = "yee-v1.0" }
